--- a/docs/master.adoc
+++ b/docs/master.adoc
@@ -7,7 +7,7 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
 
 == First Section
 
-* lorem
+* Fadata team
 * ipsum
 * dolor
 
